Bug 507098 - Preferred Accounts table on homepage has blank space and should be wider
Summary: Preferred Accounts table on homepage has blank space and should be wider
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-16 09:14 UTC by sigma343
Modified: 2025-07-19 21:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments
Imagine showing gap in preferred accounts table (157.95 KB, image/png)
2025-07-16 09:14 UTC, sigma343
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sigma343 2025-07-16 09:14:30 UTC
Created attachment 183262 [details]
Imagine showing gap in preferred accounts table

SUMMARY
The preferred accounts table on the homepage has blank space to the right of it (see attached image) and should be wider like the other homepage tables.

STEPS TO REPRODUCE
1. Activate the preferred accounts table on the homepage


OBSERVED RESULT
Width of table is less than other homepage tables (see screenshot)

EXPECTED RESULT
Preferred accounts table width should be the same as other homepage tables. 

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.3.6
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 Thomas Baumgart 2025-07-19 15:30:04 UTC
Git commit 90dd25bdb92d34631e78c1e0c743cec81c536e3b by Thomas Baumgart.
Committed on 19/07/2025 at 13:37.
Pushed by tbaumgart into branch 'master'.

Use complete width for account info on home page

When the account limit information was not selected to be displayed, a
gap appears to the right of the balance column. This change makes sure
to use the full width even if the limits are not displayed.
FIXED-IN: 5.2.1

M  +2    -1    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/-/commit/90dd25bdb92d34631e78c1e0c743cec81c536e3b
Comment 2 Thomas Baumgart 2025-07-19 21:21:15 UTC
Git commit 1cf050c2295c2acee1fa166b445712f0e0eb694d by Thomas Baumgart.
Committed on 19/07/2025 at 21:21.
Pushed by tbaumgart into branch '5.2'.

Use complete width for account info on home page

When the account limit information was not selected to be displayed, a
gap appears to the right of the balance column. This change makes sure
to use the full width even if the limits are not displayed.
FIXED-IN: 5.2.1
(cherry picked from commit 90dd25bdb92d34631e78c1e0c743cec81c536e3b)

M  +2    -1    kmymoney/views/khomeview_p.h

https://invent.kde.org/office/kmymoney/-/commit/1cf050c2295c2acee1fa166b445712f0e0eb694d